fix: improve contrast

--- a/styles/vars.css
+++ b/styles/vars.css
@@ -1,6 +1,6 @@
 :root {
-  --c-primary: #EA9E44;
-  --c-primary-active: #C16929;
+  --c-primary: #CF7C17;
+  --c-primary-active: #A45923;
   --c-border: #88888820;
   --c-bg-base: #fff;
   --c-bg-active: #f6f6f6;
